<resources>
    <string name="app_name">Programing Demo</string>
    <string name="default_web_client_id">804951612766-cs5k21sc4l9olndvovls1jce282vc5c2.apps.googleusercontent.com</string>
    <string name="demoone">Demo One</string>
    <string name="demotwo">Demo Two</string>
    <string name="subject">Subject</string>
    <string name="email">Email</string>
    <string name="body_text">Body Text</string>
    <string name="submit">Submit</string>
    <string name="enter_valid_email_address">enter valid email address</string>
    <string name="enter_email_subject">enter email subject</string>
    <string name="enter_email_body_text">enter email body text</string>
    <string name="go_to">Go To</string>
    <string name="enter_valid_url">enter valid url</string>
    <string name="internet_error">Please turn on your internet connection</string>
    <string name="values_error">Please enter valid values</string>
    <string name="subject_error">Please enter a subject</string>
    <string name="body_error">Please enter the email body text</string>
    <string name="email_error">enter valid email</string>
    <string name="app_not_found">No application can handle this URL</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="data_not_found">data not found</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="designed_and_developed_by">Designed and Developed by</string>
    <string name="and">&amp;</string>
    <string name="mmm_dd_yyyy_hh_mm_a_">MMM dd, yyyy - hh:mm a</string>
    <string name="service_running_all_ready">Service is already running</string>
    <string name="service_running">Service is running</string>
    <string name="flashlight_on">Flashlight ON</string>
    <string name="flashlight_off">Flashlight OFF</string>
    <string name="flashlight_error">Error toggling flashlight</string>
    <string name="battery_level_unknown">Battery Level: Unknown</string>
    <string name="battery_low">Battery is Low!</string>
    <string name="date_changed">Date Changed</string>
    <string name="device_rebooting">Device Rebooting</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="time_changed">Time Changed</string>
    <string name="device_boot_completed">Device Boot Completed</string>
    <string name="airplane_mode_enabled">Airplane Mode Enabled</string>
    <string name="airplane_mode_disabled">Airplane Mode Disabled</string>
    <string name="bluetooth_on">"Bluetooth is ON"</string>
    <string name="bluetooth_off">"Bluetooth is OFF"</string>
    <string name="mobile_data_off">"Mobile Data is OFF"</string>
    <string name="mobile_data_on">"Mobile Data is ON"</string>
    <string name="service_stoped">Service is stoped</string>
    <string name="textContentOne">Our priority is to ensure that you\'re provided with the smooth and best App experience and make sure that you should not face any issues.


        \n\n
        Please bear with the ads so that we can keep enhancing our app.

    </string>
    <string name="term_and_condition_text">By Clicking on the \'START\' button you agree with our </string>
    <string name="terms_of_services">Terms Of Services</string>
    <string name="all_information_provided_by_us_is_for_entertainment_purposes_only">All information provided by us is for entertainment purposes only.</string>
    <string name="data_saved_successfully">data saved successfully</string>
    <string name="email_validation_regular_expression">^((http|https)://)?(www.)?[a–zA-Z0-9@:%._\+~#?&amp;//=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%._\+~#?&amp;//=]*)$</string>
    <string name="https">http://</string>
    <string name="explicit_intent_demo_one">Explicit Intent Demo One</string>
    <string name="explicit_intent_demo_two">Explicit Intent Demo Two</string>
    <string name="implicit_intent_demo">Implicit Intent Demo</string>
    <string name="emplicit_intent_with_bundle">Emplicit Intent with bundle</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">enter your first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name">enter your last name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="enter_your_address">enter your address</string>
    <string name="send_data">Send Data</string>
    <string name="all_values">please enter all values</string>
    <string name="back">Back</string>
    <string name="small_size_error">please select small size image</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="enter_notification_title">enter notification title</string>
    <string name="enter_notification_description">enter notification description</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="enter_firstname">enter Firstname</string>
    <string name="enter_lastname">enter lastname</string>
    <string name="enter_email">enter email</string>
    <string name="enter_mobile_number">Enter 10 digit mobile number</string>
    <string name="enter_address">Enter address</string>
    <string name="notification">Notification</string>
    <string name="enter_url">please enter url</string>
    <string name="enter_different_digits">enter valid mobile number</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="preview_user_details">Preview User Details</string>
    <string name="_email">Email :</string>
    <string name="_first_name">First Name :</string>
    <string name="_last_name">Last Name :</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="gender">Gender :</string>
    <string name="hobby">Hobby :</string>
    <string name="_address">Address :</string>
    <string name="state">State :</string>
    <string name="city">City :</string>
    <string name="tap_to_select_city">Tap to Select City</string>
    <string name="tap_to_select_state">Tap to Select State</string>
    <string name="enter_first_name_here">Enter first name here...</string>
    <string name="enter_last_name_here">Enter last name here...</string>
    <string name="_enter_email">Enter email...</string>
    <string name="_mobile_no">Mobile No</string>
    <string name="enter_mobile_no">Enter Mobile no</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_hobby">Select Hobby</string>
    <string name="sport">Sport</string>
    <string name="reading">Reading</string>
    <string name="music">Music</string>
    <string name="drawing">Drawing</string>
    <string name="painting">Painting</string>
    <string name="_enter_address">Enter Address</string>
    <string name="__enter_address">Enter address...</string>
    <string name="select_state">Select State</string>
    <string name="upload_profile_pic">Upload Profile Pic</string>
    <string name="browse">Browse</string>
    <string name="cancel">Cancel</string>
    <string name="_submit">SUBMIT</string>
    <string name="select_city">Select City</string>
    <string name="please_select_city">please select city</string>
    <string name="please_select_state">please select state</string>
    <string name="please_select_a_gender">Please select a gender</string>
    <string name="please_select_at_least_one_option">Please select at least one option</string>
    <string name="please_select_image">please select image</string>
    <string name="enter_user_details">Enter User Details</string>
    <string name="user_details_form">User Details Form</string>
    <string name="unfill_radio">unfill radio</string>
    <string name="sharedpreferences">SharedPreferences</string>
    <string name="previous_data">Previous data</string>
    <string name="vipul_jadav">Vipul Jadav</string>
    <string name="heading">Heading</string>
    <string name="stop_service">stop service</string>
    <string name="start_service">start service</string>
    <string name="services_demo">Services Demo</string>
    <string name="click_here_if_you_want_to_show_previous_data">click here, if you want to show previous data</string>
    <string name="app_logo">app logo</string>
    <string name="logo_text">logo text</string>
    <string name="start">Start</string>
    <string name="app_flow">App Flow</string>
    <string name="broadcast_receiver_demo">Broadcast Receiver Demo</string>
    <string name="async_task_demo">Async Task Demo</string>
    <string name="refresh">Refresh</string>
    <string name="developer_name_">Vipul Jadav</string>
    <string name="developer_position">Android Developer Trainee</string>
    <string name="please_wait">please wait...</string>
    <string name="something_we_nt_wrong">something we\'nt wrong...</string>
    <string name="developer_name">Developer Name :</string>
    <string name="position">Position :</string>
    <string name="space">.............</string>
    <string name="static_demo">Static Demo</string>
    <string name="space_"> </string>
    <string name="you_can_check_effect_using_toggling_of_bluetooth_aiplanemode_network_connectivity_changing_date_and_time_battery_mode_doing_reboot_incoming_call">you can check effect using toggling of bluetooth, aiplanemode, network connectivity, changing date and time, battery mode, doing reboot, incoming call</string>
    <string name="message_sent">Message sent</string>
    <string name="undo">Undo</string>
    <string name="http_https_www_a_za_z0_9_2_256_a_z_2_6_b_a_za_z0_9"><![CDATA[^((http|https)://)?(www.)?[a-zA-Z0-9@:%._\\+~#?&//=]{2,256}\\.[a-z]{2,6}\\b([-a-zA-Z0-9@:%._\\+~#?&//=]*)$]]></string>
    <string name="http">http://</string>
    <string name="viewpager">ViewPager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_">image</string>
    <string name="imageslider">ImageSlider</string>
    <string name="image">image</string>
    <string name="go_to_green">Go to Green</string>
    <string name="go_to_red">Go to Red</string>
    <string name="go_to_yellow">Go To Yellow</string>
    <string name="navgraph_demo">NavGraph Demo</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="bottomnavigationbar">bottomNavigationBar</string>
    <string name="navigationdrawer">NavigationDrawer</string>
    <string name="profile_image">profile image</string>
    <string name="vipuljadav542_gmail_com">vipuljadav542@gmail.com</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="contentprovider">ContentProvider</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="gesture">Gesture</string>
    <string name="contact_list">Contact List</string>
    <string name="device_images">Device Images</string>
    <string name="song_list">Song List</string>
    <string name="room_database">Room Database</string>
    <string name="nested_recyclerview">Nested RecyclerView</string>
    <string name="register_in_firebase">Register in firebase</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="mobile_number_varification">Mobile Number Varification</string>
    <string name="first_name_">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="email_">Email</string>
    <string name="address_">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="delete_">Delete</string>
    <string name="update_">Update</string>
</resources>