<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ImplicitIntentDemoOneMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_20"
    tools:context=".intent.ActivityImplicitIntentDemoOne">

    <TextView
        style="@style/textLabelBMI"
        android:text="@string/email"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/editTextBMI"
        android:autofillHints=""
        android:hint="@string/enter_valid_email_address"
        android:inputType="textEmailAddress"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        style="@style/textLabelBMI"
        android:text="@string/subject"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edtSubject"
        style="@style/editTextBMI"
        android:autofillHints=""
        android:hint="@string/enter_email_subject"
        android:inputType="textEmailSubject"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tvTextLabel"
        style="@style/textLabelBMI"
        android:text="@string/body_text" />

    <EditText
        android:id="@+id/edtText"
        style="@style/editTextBMI"
        android:autofillHints=""
        android:hint="@string/enter_email_body_text"
        android:inputType="textMultiLine"
        android:lines="3"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintTextFieldSize" />


    <Button
        android:id="@+id/btnSubmit"
        style="@style/btnBMI"
        android:text="@string/submit"
        android:textAllCaps="false"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
