<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/parrot"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/user_profile" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vipul_jadav"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/vipuljadav542_gmail_com"
        android:textColor="@android:color/white" />
</LinearLayout>
