<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight=".8"
            android:text="@string/vipul_jadav"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:contentDescription="@string/edit"
            android:src="@drawable/edit_svg" />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_weight=".1"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete_svg" />

    </LinearLayout>


</androidx.cardview.widget.CardView>